--- a/ColorTrading.html
+++ b/ColorTrading.html
@@ -93,7 +93,7 @@
     <p class="subtitle">Get daily tips and start earning smartly with accuracy.</p>
   </header>
 
-  <img src="https://assets.onecompiler.app/43mwyu3n3/43mwufpfu/WhatsApp%20Image%202025-06-13%20at%203.16.22%20PM.jpeg" alt="Color Prediction Banner" class="hero-image"/>
+  <img src="WhatsApp Image 2025-06-13 at 3.16.22 PM.jpeg" alt="Color Prediction Banner" class="hero-image"/>
 
   <ul class="features">
     <li>Daily Accurate Predictions</li>
